# customer-retention-copilot-agent

./: .env  README.md  main.py  pyproject.toml  requirements.txt
backend/: data_load.py  endpoints.py  load_embeddings.py  tables.py  test.py
backend/customer_intelligence_agent/: analyst.py  analyst_agent.py  healthscore.py
